fix: preserve insertion order in ConversationState maps
Map.copyOf() discards LinkedHashMap ordering. Renderer needs
chronological insertion order for within-group point rendering.
Switch to Collections.unmodifiableMap(new LinkedHashMap<>(...)).

Refs casehubio/drafthouse#81